- Clean up the directory a little bit. - Modify the prediction algorithm

--- a/Info.plist
+++ b/Info.plist
@@ -28,5 +28,7 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<string>video-camera</string>
 </dict>
 </plist>
